--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: #fff;
-  max-width: 1020px;
+  width: 100%;
   text-align: center;
   margin: auto;
   background-repeat: no-repeat;
