--- a/style.css
+++ b/style.css
@@ -213,6 +213,9 @@ h2{
     font-size: 70%;
     padding: 0.1em;
   }
+  .sns, .hamburger {
+    padding: 0px;
+  }
   #strings,#access {
     display: flex;
   }
